--- a/interface/templates/interface/index.html
+++ b/interface/templates/interface/index.html
@@ -1,9 +1,13 @@
-{% if available_drinks %}
-    <ul>
-        {% for drink in available_drinks %}
-            <li><a href="/interface/order/?drink={{ drink }}&cup_id={{ cup_id }}&api_key={{ api_key }}">{{ drink }}</a></li>
-        {% endfor %}
-    </ul>
+{% if not cup_id or not api_key%}
+    <p>invalid connection, please connect over QR code</p>
 {% else %}
-    <p>No drinks are available</p>
+    {% if available_drinks %}
+        <ul>
+            {% for drink in available_drinks %}
+                <li><a href="/interface/order/?drink={{ drink }}&cup_id={{ cup_id }}&api_key={{ api_key }}">{{ drink }}</a></li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>No drinks are available</p>
+    {% endif %}
 {% endif %}
