--- a/interface_v0.1/style.css
+++ b/interface_v0.1/style.css
@@ -5,8 +5,12 @@ a {
     height: 130px;   
     overflow-y:hidden;
     overflow-x: scroll;
+    
     -webkit-overflow-scrolling: touch;
     white-space: nowrap;
+}
+#k_container::-webkit-scrollbar{
+    display: none;
 }
 .kachel
 {
@@ -15,7 +19,7 @@ a {
     display: inline-block;
     background:  orange;
     background-position: top; 
-    background-position-y: 8px;
+    background-position-y: 5px;
     background-size: 70%; 
     background-repeat: no-repeat;
     font-size: 50px;
@@ -27,14 +31,20 @@ a {
     padding: 0px;
     font-display: 20px;
     overflow: hidden;
+    z-index: 0;
 }
 .k_text{
+    position:relative;
+    left: 1%;
+    bottom: 3%;
     height: 25px;
-    width:100%;
+    width: 98%;
     background-color: black;
-    margin-top: 100px;
+    border-radius: 5px 5px 10px 25px;
+    margin-top: 95px;
     padding-top: 2px;
     font-size: 15px;
+    text-align: center;
     color:white;
     text-decoration: none;
 }
@@ -43,6 +53,7 @@ a {
   	position: fixed; 
     margin-left: 13px; 
     height: 100%;
+    z-index: 1;
 }
 .s_button{
 	height:50px;
@@ -96,6 +107,20 @@ h1{
     -webkit-text-stroke: 2px black;
     color: orange;
  }
+#b_abbruch{
+    position:relative;
+    float: none;
+    display: block;
+    width: 50%;
+    top: -40px;
+    left: 40%;
+    background-color: red;
+    border: 2px solid black;
+    font-size: 30px;
+    text-align: center;
+    border-radius: 5px;
+    margin: -4%;
+}
 h2{
     font-size: 30px;
 }
@@ -120,16 +145,16 @@ h2{
     bottom: 0px;
     z-index: 0;
     animation-name:b_open;
-    animation-duration: 1s;
+    animation-duration: 0.5s;
     overflow: hidden;
 }
 @keyframes b_open{
     0%{right: 100%;
-        left: 0%;
-        top: 0%;
         bottom: 100%;
         opacity: 0%;}
-    100%{}
+    100%{right: 0%;
+        bottom: 0%;
+        opacity: 100%;}
 }
 #b_textfeld{
     position: absolute;
