final tweaks to enable machine communication and minor design changes

--- a/interface/templates/interface/message.html
+++ b/interface/templates/interface/message.html
@@ -21,7 +21,7 @@
             {{ m }}
         </div>
     {% endfor %}
-    <a class="text-center btn btn-primary" style="font-size: 24px;" href="./../../interface/index/">Zurück zur Startseite</a>
+    <a class="text-center btn btn-primary" style="font-size: 24px;" href="./../../interface/index/?api_key={{ api_key }}&cup_id={{ cup_id }}&drink_name={{ drink_name }}">Zurück zur Startseite</a>
     </div>
 </body>
 </html>
