--- a/interface/templates/interface/index.html
+++ b/interface/templates/interface/index.html
@@ -26,6 +26,13 @@
             </div>
         {% else %}
             <div class="row row-cols-1">
+                {% if order_placed %}
+                    <div class="col">
+                        <div class="alert alert-info mt-4" role="alert">
+                            aktuelle Bestellung: {{ order_placed }}
+                        </div>
+                    </div>
+                {% endif %}
                 {% if available_drinks %}
                         {% for drink in available_drinks %}
                             <div class="col">
